Add student archive item detail metadata read
